...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        tableView.accessibilityIdentifier = "tableview_assortments"
        tableView.delegate = self
        tableView.register(AssortmentCell.self, forCellReuseIdentifier: "assortmentCell")
    }
    
}

...
